--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="node_modules/modern-normalize/modern-normalize.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,31 +15,34 @@
 
 <body>
     <!-- header section -->
-    <header>
-        <nav>
+    <header class="header-section">
+        <div class="header-container container">
+        <nav class="nav-section">
             <a class="link-logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-            <ul>
-                <li>
+            <ul class="header-list list">
+                <li class="head-nav-item">
                     <a class="nav-item" href="./index.html" target="_blank">Studio</a>
                 </li>
-                <li>
+                <li class="head-nav-item">
                     <a class="nav-item" href="" target="_blank">Portfolio</a>
                 </li>
-                <li>
+                <li class="head-nav-item">
                     <a class="nav-item" href="" target="_blank">Contacts</a>
                 </li>
             </ul>
-        </nav>
+       
         <address class="address-section">
-            <ul>
-                <li>
+            <ul class="address-list list">
+                <li class="add-item">
                     <a class="head-address-item" href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
-                <li>
+                <li class="add-item">
                     <a  class="head-address-item" href="tel:+110001111111">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
+        </nav>
+        </div>
     </header>
 
     
@@ -49,26 +52,28 @@
 
         <!-- hero section -->
         <section class="hero-section">
+            <div class=" hero-container container">
             <h1 class="hero-title">
                 Effective Solutions
                 for Your Business
             </h1>
             <button class="hero-button" type="button">Order Service</button>
+            </div>
         </section>
 
 
         <!-- section 2 -->
-        <section>
-            <h2 class="section" hidden>Description</h2>
-            <ul>
-                <li>
+        <section class="descript-section">
+            <h2 class="visually-hidden" >Description</h2>
+            <ul class="descript-list">
+                <li class="descript-item">
                     <h3 class="second-title">Strategy</h3>
                     <p class="section-text">
                         Our goal is to identify the business
                         problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
-                <li>
+                <li class="descript-item" >
                     <h3 class="second-title">Punctuality</h3>
                     <p class="section-text">
                         Bring the key message to the
@@ -76,7 +81,7 @@
                         within the shortest possible time.
                     </p>
                 </li>
-                <li>
+                <li class="descript-item">
                     <h3 class="second-title">Diligence</h3>
                     <p class="section-text">
                         Research and confirm brands that
@@ -84,7 +89,7 @@
                         opportunities and minimize risk.
                     </p>
                 </li>
-                <li>
+                <li class="descript-item">
                     <h3 class="second-title">Technologies</h3>
                     <p class="section-text">
                         Design practice focused on digital
@@ -97,77 +102,103 @@
 
         <!-- section 3 -->
         <section class="team-section">
+            <div class="container">
             <h2 class="team-title">Our Team</h2>
-            <ul>
+            <ul class="team">
                 <li class="team-item-list">
                     <img class="team-worker" src="./images/img/mark01.jpg" alt="man" width="264" height="260" />
+                    <div class="team-container">
                     <h3 class="team-list">Mark Guerrero</h3>
                     <p class="team-proff">Product Designer</p>
+                    </div>
                 </li>
                 <li class="team-item-list" >
                     <img src="./images/img/tom01.jpg" alt="man" width="264" height="260" />
+                    <div class="team-container">
                     <h3 class="team-list">Tom Ford</h3>
                     <p class="team-proff">Frontend Developer</p>
+                    </div>
                 </li>
                 <li class="team-item-list">
                     <img src="./images/img/camila01.jpg" alt="woman" width="264" height="260" />
+                    <div class="team-container">
                     <h3 class="team-list">Camila Garcia</h3>
                     <p class="team-proff">Marketing</p>
+                    </div>
                 </li>
                 <li class="team-item-list">
                     <img src="./images/img/daniel01.jpg" alt="man" width="264" height="260" />
+                    <div class="team-container">
                     <h3 class="team-list">Daniel Wilson</h3>
                     <p class="team-proff">UI Designer</p>
+                    </div>
                 </li>
             </ul>
+            </div>
         </section>
 
         <!-- our portfolio -->
-        <section>
+        <section class="portfolio">
+            <div class="container">
             <h2 class="main-portfolio-title">Our Portfolio</h2>
-            <ul>
+            <ul class="portfolio-list">
                 <li>
                     <img src="./images/img/banking0.jpg" alt="app tabs" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title" >Banking App</h3>
                     <p class="describe-portfolio">App</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/img/cashless0.jpg" alt="pay by phone" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title">Cashless Payment</h3>
                     <p class="describe-portfolio">Marketing</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/img/mediation0.jpg" alt="laptop and phone" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title">Meditation App</h3>
                     <p class="describe-portfolio">App</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/img/taxi0.jpg" alt="car" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title">Taxi Service</h3>
                     <p class="describe-portfolio">Marketing</p>
+                    </div>
                 </li>
                 <li>
                     <img src="./images/img/screen0.jpg" alt="phone and screen" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
                     <p class="describe-portfolio">Design</p>
+                    </div>
                 </li>
-                <li>
+                <div>
                     <img src="./images/img/online0.jpg" alt="woman with phone" width="360" height="300" />
+                    <div class="portfolio-container">
                     <h3 class="portfolio-title">Online Courses</h3>
                     <p class="describe-portfolio">Marketing</p>
+                </div>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
     <!-- footer section -->
     <footer class="footer-section">
+        <div class="footer-container container">
         <a  class="footer-link-logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and
             sales for your business with digital
             marketing & growth solutions.
         </p>
+        </div>
     </footer>
 </body>
 </html>
