--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- hero section -->
         <section class="hero-section">
-            <div class=" hero-container container">
+            <div class="container">
             <h1 class="hero-title">
                 Effective Solutions
                 for Your Business
@@ -64,6 +64,7 @@
 
         <!-- section 2 -->
         <section class="descript-section">
+            <div class="container">
             <h2 class="visually-hidden" >Description</h2>
             <ul class="descript-list">
                 <li class="descript-item">
@@ -98,6 +99,7 @@
                     </p>
                 </li>
             </ul>
+            </div>
         </section>
 
         <!-- section 3 -->
@@ -142,7 +144,7 @@
             <div class="container">
             <h2 class="main-portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/img/banking0.jpg" alt="app tabs" width="360" height="300" />
                     <div class="portfolio-container">
                     <h3 class="portfolio-title" >Banking App</h3>
