--- a/index.html
+++ b/index.html
@@ -151,34 +151,35 @@
                     <p class="describe-portfolio">App</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/img/cashless0.jpg" alt="pay by phone" width="360" height="300" />
                     <div class="portfolio-container">
                     <h3 class="portfolio-title">Cashless Payment</h3>
                     <p class="describe-portfolio">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/img/mediation0.jpg" alt="laptop and phone" width="360" height="300" />
                     <div class="portfolio-container">
                     <h3 class="portfolio-title">Meditation App</h3>
                     <p class="describe-portfolio">App</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/img/taxi0.jpg" alt="car" width="360" height="300" />
                     <div class="portfolio-container">
                     <h3 class="portfolio-title">Taxi Service</h3>
                     <p class="describe-portfolio">Marketing</p>
                     </div>
                 </li>
-                <li>
+                <li class="portfolio-item">
                     <img src="./images/img/screen0.jpg" alt="phone and screen" width="360" height="300" />
                     <div class="portfolio-container">
                     <h3 class="portfolio-title">Screen Illustrations</h3>
                     <p class="describe-portfolio">Design</p>
                     </div>
                 </li>
+                <li class="portfolio-item">
                 <div>
                     <img src="./images/img/online0.jpg" alt="woman with phone" width="360" height="300" />
                     <div class="portfolio-container">
